Issue-77: Use native structured output