@@ -1,6 +1,7 @@
 package ch.exmachina.cosmo42.services.kb;
 
 import ch.exmachina.cosmo42.services.kb.schema.Chunk;
+import ch.exmachina.cosmo42.services.kb.schema.ChunkType;
 import ch.exmachina.cosmo42.services.kb.schema.DocumentPage;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -10,6 +11,7 @@ import org.springframework.ai.openai.OpenAiChatOptions;
 import java.util.ArrayList;
 import java.util.List;
 
+import static java.util.Map.entry;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 
@@ -31,11 +33,11 @@ class KBDocumentChunkerMergePagesTest {
     void mergePages_singlePageNoCutoffs_passesThrough() {
         DocumentPage page = pageWith(chunk("text", "hello", null, false));
 
-        List<DocumentPage> result = chunker.mergePages(List.of(page));
+        var result = chunker.mergePages(List.of(entry(1, page)));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getChunks()).hasSize(1);
-        assertThat(result.get(0).getChunks().get(0).getContent()).isEqualTo("hello");
+        assertThat(result.get(0).getValue().getChunks()).hasSize(1);
+        assertThat(result.get(0).getValue().getChunks().get(0).getContent()).isEqualTo("hello");
     }
 
     @Test
@@ -45,14 +47,14 @@ class KBDocumentChunkerMergePagesTest {
                 chunk("text", "end", null, false),
                 chunk("text", "second", null, false));
 
-        List<DocumentPage> result = chunker.mergePages(List.of(page1, page2));
+        var result = chunker.mergePages(List.of(entry(1, page1), entry(2, page2)));
 
         assertThat(result).hasSize(2);
-        assertThat(result.getFirst().getChunks()).hasSize(1);
-        assertThat(result.get(0).getChunks().getFirst().getContent()).isEqualTo("begin end");
-        assertThat(result.get(0).getChunks().getFirst().getContinuesOnNextPage()).isFalse();
-        assertThat(result.get(1).getChunks()).hasSize(1);
-        assertThat(result.get(1).getChunks().getFirst().getContent()).isEqualTo("second");
+        assertThat(result.getFirst().getValue().getChunks()).hasSize(1);
+        assertThat(result.get(0).getValue().getChunks().getFirst().getContent()).isEqualTo("begin end");
+        assertThat(result.get(0).getValue().getChunks().getFirst().getContinuesOnNextPage()).isFalse();
+        assertThat(result.get(1).getValue().getChunks()).hasSize(1);
+        assertThat(result.get(1).getValue().getChunks().getFirst().getContent()).isEqualTo("second");
     }
 
     @Test
@@ -60,10 +62,10 @@ class KBDocumentChunkerMergePagesTest {
         DocumentPage page1 = pageWith(chunk("text", "para", null, true));
         DocumentPage page2 = pageWith(chunk("table", "| a |", "summary", false));
 
-        List<DocumentPage> result = chunker.mergePages(List.of(page1, page2));
+        var result = chunker.mergePages(List.of(entry(1, page1), entry(2, page2)));
 
-        assertThat(result.get(0).getChunks().getFirst().getContent()).isEqualTo("para");
-        assertThat(result.get(1).getChunks().getFirst().getContent()).isEqualTo("| a |");
+        assertThat(result.get(0).getValue().getChunks().getFirst().getContent()).isEqualTo("para");
+        assertThat(result.get(1).getValue().getChunks().getFirst().getContent()).isEqualTo("| a |");
     }
 
     @Test
@@ -72,12 +74,26 @@ class KBDocumentChunkerMergePagesTest {
         DocumentPage page2 = pageWith(chunk("text", "b", null, true));
         DocumentPage page3 = pageWith(chunk("text", "c", null, false));
 
-        List<DocumentPage> result = chunker.mergePages(List.of(page1, page2, page3));
+        var result = chunker.mergePages(List.of(entry(1, page1), entry(2, page2), entry(3, page3)));
 
-        assertThat(result.get(0).getChunks().getFirst().getContent()).isEqualTo("a b c");
-        assertThat(result.get(0).getChunks().getFirst().getContinuesOnNextPage()).isFalse();
-        assertThat(result.get(1).getChunks()).isEmpty();
-        assertThat(result.get(2).getChunks()).isEmpty();
+        assertThat(result.get(0).getValue().getChunks().getFirst().getContent()).isEqualTo("a b c");
+        assertThat(result.get(0).getValue().getChunks().getFirst().getContinuesOnNextPage()).isFalse();
+        assertThat(result.get(1).getValue().getChunks()).isEmpty();
+        assertThat(result.get(2).getValue().getChunks()).isEmpty();
+    }
+    
+    @Test
+    void mergePages_cutoffNotMergedIfNonContiguosPages_mergesAll() {
+        DocumentPage page1 = pageWith(chunk("text", "a", null, true));
+        DocumentPage page2 = pageWith(chunk("text", "b", null, true));
+        DocumentPage page4 = pageWith(chunk("text", "c", null, false));
+
+        var result = chunker.mergePages(List.of(entry(1, page1), entry(2, page2), entry(4, page4)));
+
+        assertThat(result.get(0).getValue().getChunks().getFirst().getContent()).isEqualTo("a b");
+        assertThat(result.get(0).getValue().getChunks().getFirst().getContinuesOnNextPage()).isTrue();
+        assertThat(result.get(1).getValue().getChunks()).isEmpty();
+        assertThat(result.get(2).getValue().getChunks()).containsExactlyElementsOf(page4.getChunks());
     }
 
     @Test
@@ -85,9 +101,9 @@ class KBDocumentChunkerMergePagesTest {
         DocumentPage page1 = pageWith(chunk("table", "| row1 |", "first half", true));
         DocumentPage page2 = pageWith(chunk("table", "| row2 |", "second half", false));
 
-        List<DocumentPage> result = chunker.mergePages(List.of(page1, page2));
+        var result = chunker.mergePages(List.of(entry(1, page1), entry(2, page2)));
 
-        Chunk merged = result.getFirst().getChunks().getFirst();
+        Chunk merged = result.getFirst().getValue().getChunks().getFirst();
         assertThat(merged.getContent()).isEqualTo("| row1 | | row2 |");
         assertThat(merged.getSummary()).isEqualTo("first half second half");
     }
@@ -97,14 +113,14 @@ class KBDocumentChunkerMergePagesTest {
         DocumentPage page1 = pageWith(chunk("text", "x", null, false));
         DocumentPage nullChunks = new DocumentPage(null);
 
-        List<DocumentPage> result = chunker.mergePages(new ArrayList<>(List.of(page1, nullChunks)));
+        var result = chunker.mergePages(new ArrayList<>(List.of(entry(1, page1), entry(2, nullChunks))));
 
         assertThat(result).hasSize(1);
-        assertThat(result.getFirst().getChunks().getFirst().getContent()).isEqualTo("x");
+        assertThat(result.getFirst().getValue().getChunks().getFirst().getContent()).isEqualTo("x");
     }
 
     private static Chunk chunk(String type, String content, String summary, boolean continues) {
-        return new Chunk(type, content, summary, continues);
+        return new Chunk(ChunkType.valueOf(type), content, summary, continues);
     }
 
     private static DocumentPage pageWith(Chunk... chunks) {
